Fix line spacing in cards

--- a/www/styles/styles.scss
+++ b/www/styles/styles.scss
@@ -531,12 +531,15 @@ div .card-box:hover h3 {
   font-size: 1rem;
   width: 100%;
   padding: 0 2rem;
+  margin: 0;
 }
 
 .topic-two {
   font-size: 1rem;
   width: 100%;
   padding: 2rem 2rem 0;
+  margin: 0;
+
 }
 
 .right-arrow {
